# ai-media-gen-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  evolution.md  package.json  pyproject.toml  tutorial-category.yml  zzzzz
.claude/: settings.local.json
.claude/skills/: .gitignore
docs/hailuo-video/: download_video.md  get_video_task_status.md  minimax_file_platform.md  text_to_video.md  video_with_character
docs/juzi/: video_image.md
docs/openclaw-skills/: skills.md  skills_config.md  slash_command.md
docs/openclaw-workspace/: README.md  README_CN.md
docs/openclaw_skills/: create_skills.md
docs/tianpule/: generate_lyrics.md  generate_music.md  generate_song.md  lyrics_callback.md  music_callback.md  query_lyrics_status.md  query_music_status.md  query_song_stauts.md  song_callback.md
docs/即梦AI/: 1080P-图生视频-首尾帧-接口文档.md  1080P-图生视频-首帧-接口文档.md  1080P-文生视频-接口文档.md  720P-图生视频-首尾帧-接口文档.md  720P-图生视频-首帧-接口文档.md  720P-文生视频-接口文档.md
docs/番茄小说/: 内容安全须知.md  小说封面生图最佳实践.md  番茄写作攻略采集日志.md  番茄小说写作最佳实践.md
docs/豆包模型接入文档/: 开发文档.md  模型列表.md
prompts/: doubao_image_to_image_prompt.md  doubao_text_to_image_prompt.md
prompts/video_generate/: maid_times_square.md  raw.md  short_video_creation_guidelines.md  video_prompt_best_practices.md
scripts/python/: doubao_common.py  doubao_image_to_image.py  doubao_text_to_image.py  seedream_cli.py
skills/doubao-image-generation/: SKILL.md
skills/image_generation_workflow/: SKILL.md
skills/juzi_image_video_generation/: SKILL.md
skills/juzi_image_video_generation_deprecated/: SKILL.md
thoughts/: auto_deploy_workflow.md
(+188 files in other folders)
