[project]
name = "vscode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "volcengine-python-sdk[ark]>=5.0.19",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
